update: fixed background icons not showing on gh pages

--- a/css/style.css
+++ b/css/style.css
@@ -84,7 +84,7 @@ h2 {
     height: 150px;
     width: 150px;
 
-    background-image: url(/images/asteroid.png);
+    background-image: url(../images/asteroid.png);
     background-size: 100%;
 }
 
@@ -92,7 +92,7 @@ h2 {
     height: 150px;
     width: 150px;
 
-    background-image: url(/images/document.png);
+    background-image: url(../images/document.png);
     background-size: 100%;
 }
 
@@ -100,6 +100,6 @@ h2 {
     height: 150px;
     width: 150px;
     
-    background-image: url(/images/scissors.png);
+    background-image: url(../images/scissors.png);
     background-size: 100%;
 }
